endpoint para listar a los pacientes
