# src/routes/patientRoutes.js
@@ -14,6 +14,7 @@ const { verifyToken, isAdmin, isMedicoOrAdmin } = require('../middleware/auth');
 router.post('/pacientes', [verifyToken, isMedicoOrAdmin], patientController.createPatient);
 
 router.get('/pacientes', [verifyToken, isMedicoOrAdmin], patientController.getPatients);
+router.get('/pacientes/listado', [verifyToken, isMedicoOrAdmin], patientController.getAllPatients);
 router.get('/pacientes/contactos', [verifyToken, isMedicoOrAdmin], patientController.getPatientContacts);
 router.get('/pacientes/:cedula/historial', [verifyToken, isMedicoOrAdmin], patientController.getPatientHistory);
 router.get('/pacientes/atencion/:id', [verifyToken, isMedicoOrAdmin], patientController.getAttentionById);
